--- a/configserver/src/main/resources/config/api-gateway.yml
+++ b/configserver/src/main/resources/config/api-gateway.yml
@@ -1,9 +1,11 @@
 spring:
+  application:
+    name: api-gateway
   security:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://127.0.0.1:8181/realms/fitness-oauth2/protocol/openid-connect/certs
+          jwk-set-uri: http://8181/realms/fitness-oauth2/protocol/openid-connect/certs
   cloud:
     gateway:
       routes:
